# june

./: .gitmodules  CMakeLists.txt  README.md  june.pro
batterymonitor/: app.cpp  batterymonitor.pro  systemtrayicon.cpp
june/: app.cpp  app.h  june.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
june/data/: climatedata.cpp  climatedata.h  trigger.cpp  trigger.h  triggerdata.cpp  triggerdata.h
june/gui/: addtriggerdialog.cpp  addtriggerdialog.h  addtriggerdialog.ui  climateguiwidget.cpp  climateguiwidget.h  climateguiwidget.ui  menubar.cpp  menubar.h  statusbar.cpp  statusbar.h  tabletool.cpp  tabletool.h  triggerdatatablemodel.cpp  triggerdatatablemodel.h  triggerguiwidget.cpp  triggerguiwidget.h  triggerguiwidget.ui  triggertablemodel.cpp  triggertablemodel.h
june/triggermanager/: trigger.cpp  trigger.h  triggermanager.cpp  triggermanager.h  triggertablemodel.cpp  triggertablemodel.h
june/triggermanager/triggers/: valuetrigger.cpp  valuetrigger.h
